# chatgpt-qr-code-plugin

./: .gitignore  README.md  ai-plugin.json  pyproject.toml
server/: main.py
services/: qr.py
